src/app/_components/Hero/hero.module.scss
@use "../../../styles/variables" as v;

.hero {
  display: flex;
  width: 100%;
  gap: 0.5rem;
  min-height: 100dvh;
  overflow-x: hidden;
  color: v.$secondary-text-color;
  font-family: v.$primary-font;
  .heroInfo {
    flex: 1;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    position: relative;
    z-index: 10000;

    &::after {
      content: " ";
      left: 0;
      top: 0;
      width: 100%;
      height: 100%;
      position: absolute;
      z-index: -1;
      background: linear-gradient(125deg, rgb(0, 255, 255) 0%, deeppink 35%);
      -webkit-mask: radial-gradient(circle at 5% 30%, red 0%, transparent 25%);
      animation: bubble 3s infinite ease-in-out,
        colorShift 10s infinite ease-in-out;
    }
    &::before {
      content: " ";
      left: 65%;
      width: 100%;
      height: 100%;
      position: absolute;
      z-index: -1;
      background: linear-gradient(125deg, aqua 13%, deeppink 38%);
      -webkit-mask: radial-gradient(circle at 30% 50%, red 0%, transparent 25%);
      animation: bubble 3s infinite ease-in-out,
        colorShift 10s infinite ease-in-out;
    }

    p {
      max-width: 650px;
      font-weight: 600;
      text-align: center;
    }

    h1 {
      max-width: 650px;
      font-family: v.$title-font;
      font-weight: 800;
      font-size: 4rem;
      color: v.$primary-text-color;
      text-align: center;
    }
  }
}

@keyframes bubble {
  0%,
  100% {
    transform: scale(1);
  }
  50% {
    transform: scale(1.05);
  }
}

@keyframes colorShift {
  0% {
    background: linear-gradient(125deg, rgb(0, 255, 255) 0%, deeppink 35%);
  }
  50% {
    background: linear-gradient(125deg, limegreen 0%, orange 35%);
  }
  100% {
    background: linear-gradient(125deg, blue 0%, violet 35%);
  }
}

